Commit missing java file fixes

--- a/Connect2Fit/app/src/main/res/values/strings.xml
+++ b/Connect2Fit/app/src/main/res/values/strings.xml
@@ -48,5 +48,13 @@
     <string name="lbl_forgot_password">Forgot password?</string>
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
     <string name="title_activity_signup">SignupActivity</string>
+    <string name="edit_profile" />
+    <string name="edit_session" />
+    <string name="find_meal_plan" />
+    <string name="find_a_trainer" />
+    <string name="progress" />
+    <string name="confirm_password" />
+
+
 
 </resources>
